# todo-rust

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  nginx_config.conf  rust_config.yml  state.json  to_do_items.postman_collection.json
backend/: .env  Cargo.toml  Dockerfile  README.md  config.yaml  config.yml  state.json
backend/css/: main.css
backend/javascript/: main.js
backend/migrations/2026-01-22-210033-0000_create_users/: down.sql  up.sql
backend/src/: config.rs  counter.rs  database.rs  jwt.rs  main.rs  state.rs
backend/src/json_serialization/: to_do_item.rs  to_do_items.rs
backend/src/models/item/: new_item.rs
backend/src/to_do/: enums.rs
backend/src/to_do/structs/: base.rs  done.rs  mod.rs  pending.rs
backend/src/to_do/traits/: edit.rs
backend/src/views/: mod.rs
backend/src/views/app/: content_loader.rs  items.rs
backend/src/views/auth/: login.rs  logout.rs  mod.rs
backend/src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs
backend/src/views/users/: create.rs
backend/templates/: main.html
css/: base.css  main.css
frontend/: .env  Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
frontend/electron/: main.js  package.json
frontend/src/: App.css  App.tsx  TodoApp.tsx
javascript/: main.js
nginx/ssl/: self.crt  self.key
scripts/: generate_certs.sh  run_test_pipeline.sh
src/: main.rs  processes.rs
src/json_serialization/: to_do_items.rs
src/to_do/: enums.rs
src/views/: mod.rs
src/views/app/: items.rs  (+1 more)
templates/: main.html
templates/components/: header.css  header.html
(+18 files in other folders)
