[package]
name = "web_app"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
serde_yaml = "0.9.34"
serde = { version = "1.0.228", features = ["derive"] }

[dependencies]
actix-cors = "0.7.1"
actix-service = "2.0.3"
actix-web = "4.12.1"
bcrypt = "0.18.0"
chrono = { version = "0.4.43", features = ["serde"] }
diesel = { version = "2.3.5", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
lazy_static = "1.5.0"
log = "0.4.29"
redis = "1.0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
uuid = { version = "1.19.0", features = ["serde", "v4"] }

